# InsteonServer

./: .gitignore  .gitmodules  CMakeLists.txt  Insteon Test REST.paw  Makefile  README.md  insteonMgr.worksheet  new REST commands.paw
Home Control 2/Home2/: ALDBAddView.storyboard  ALDBAddViewController.swift  ActionDetailView.storyboard  ActionDetailViewController.swift  ActionsView.storyboard  ActionsViewController.swift  AppDelegate.swift  AppPrefs.swift  DeviceALDBView.storyboard  DeviceALDBViewController.swift  DeviceCell.swift  DeviceCell.xib  DeviceDetailView.storyboard  DeviceDetailViewController.swift  DeviceGroupView.storyboard  DeviceGroupViewController.swift  DeviceLinkView.storyboard  DeviceLinkViewController.swift  DevicePicker.storyboard  DevicePickerController.swift  DevicesView.storyboard  DevicesViewController.swift  FloatingButton.swift  GroupsDetailView.storyboard  GroupsDetailViewController.swift  GroupsView.storyboard  GroupsViewController.swift  HCServerManager.swift  HomeControl.swift  Info.plist  InfoView.storyboard  InfoViewController.swift  InsteonFetcher.swift  KeypadsView.storyboard  KeypadsViewController.swift  MainView.storyboard  MainViewController.swift  SceneDelegate.swift  ScheduleDetailView.storyboard  ScheduleDetailViewController.swift  (+3 more)
Home Control/Shared/: AppPrefs.swift  ContentView.swift  HCServerManager.swift  Home_ControlApp.swift  ServerInfoView.swift  (+1 more)
InsteonMgr/: Action.cpp  Action.hpp  DeviceID.cpp  DeviceID.hpp  DeviceInfo.cpp  DeviceInfo.hpp  Event.cpp  Event.hpp  InsteonALDB.cpp  InsteonALDB.hpp  InsteonAPISecretMgr.cpp  InsteonAPISecretMgr.hpp  InsteonCmdQueue.cpp  InsteonCmdQueue.hpp  InsteonDB.cpp  InsteonDB.hpp  InsteonDevice.cpp  InsteonDevice.hpp  InsteonDeviceEventMgr.cpp  InsteonDeviceEventMgr.hpp  InsteonException.hpp  InsteonLinking.cpp  InsteonLinking.hpp  InsteonMgr.cpp  InsteonMgr.hpp  InsteonMgrDefs.hpp  InsteonPLM.cpp  InsteonPLM.hpp  InsteonParser.cpp  InsteonParser.hpp  InsteonValidator.cpp  InsteonValidator.hpp  LogMgr.cpp  LogMgr.hpp  NotificationCenter.cpp  NotificationCenter.hpp  PLMStream.cpp  PLMStream.hpp  ScheduleMgr.cpp  ScheduleMgr.hpp  (+5 more)
InsteonServer.xcodeproj/: project.pbxproj
PAW tools/: InsteonServer REST commands.paw
assets/: PLMDB_52.18.42.txt
resources/: PLMDB.txt  PLMDB_52.18.42.txt  deviceNames.txt
src/: CommonIncludes.h  ServerCmdValidators.cpp  ServerCmdValidators.hpp  ServerCommands.cpp  ServerCommands.hpp  ServerCommandsLineFunctions.cpp  ServerNouns.cpp  main.cpp
start_server/: main.c
(+39 files in other folders)
